fix(ci): strip quotes from Supabase credential extraction
Fixed Pydantic validation error where SUPABASE_URL was being extracted with quotes:
- Input was: '"http://127.0.0.1:54321"' (with quotes)
- Pydantic URL validator failed: "Input should be a valid URL"

Solution: Added `tr -d '"'` to strip quotes from all credential extractions:
- api_url (API_URL)
- db_url (DB_URL)
- anon_key (ANON_KEY)
- service_key (SERVICE_ROLE_KEY)
- inbucket_url (INBUCKET_URL)

Now credentials are extracted cleanly without quotes, allowing Pydantic validation to pass.

Related to CUR-33

🤖 Generated by Aygentic

Co-Authored-By: Aygentic <noreply@aygentic.com>

--- a/.github/workflows/test-frontend.yml
+++ b/.github/workflows/test-frontend.yml
@@ -90,15 +90,15 @@ jobs:
       - name: Start Supabase local
         run: supabase start
 
-      # Extract Supabase credentials from local instance
+      # Extract Supabase credentials from local instance (strip quotes)
       - name: Get Supabase credentials
         id: supabase
         run: |
-          echo "api_url=$(supabase status --output env | grep API_URL | cut -d '=' -f2)" >> $GITHUB_OUTPUT
-          echo "db_url=$(supabase status --output env | grep DB_URL | cut -d '=' -f2)" >> $GITHUB_OUTPUT
-          echo "anon_key=$(supabase status --output env | grep ANON_KEY | cut -d '=' -f2)" >> $GITHUB_OUTPUT
-          echo "service_key=$(supabase status --output env | grep SERVICE_ROLE_KEY | cut -d '=' -f2)" >> $GITHUB_OUTPUT
-          echo "inbucket_url=$(supabase status --output env | grep INBUCKET_URL | cut -d '=' -f2)" >> $GITHUB_OUTPUT
+          echo "api_url=$(supabase status --output env | grep API_URL | cut -d '=' -f2 | tr -d '"')" >> $GITHUB_OUTPUT
+          echo "db_url=$(supabase status --output env | grep DB_URL | cut -d '=' -f2 | tr -d '"')" >> $GITHUB_OUTPUT
+          echo "anon_key=$(supabase status --output env | grep ANON_KEY | cut -d '=' -f2 | tr -d '"')" >> $GITHUB_OUTPUT
+          echo "service_key=$(supabase status --output env | grep SERVICE_ROLE_KEY | cut -d '=' -f2 | tr -d '"')" >> $GITHUB_OUTPUT
+          echo "inbucket_url=$(supabase status --output env | grep INBUCKET_URL | cut -d '=' -f2 | tr -d '"')" >> $GITHUB_OUTPUT
 
       - name: Set up Python
         uses: actions/setup-python@v6
