--- a/.github/workflows/test-frontend.yml
+++ b/.github/workflows/test-frontend.yml
@@ -90,16 +90,9 @@ jobs:
       - name: Start Supabase local
         run: supabase start
 
-      # Extract Supabase credentials from local instance (strip quotes and fix DB URL driver)
-      - name: Get Supabase credentials
-        id: supabase
-        run: |
-          echo "api_url=$(supabase status --output env | grep API_URL | cut -d '=' -f2 | tr -d '"')" >> $GITHUB_OUTPUT
-          # Transform postgresql:// to postgresql+psycopg:// for psycopg3 driver
-          echo "db_url=$(supabase status --output env | grep DB_URL | cut -d '=' -f2 | tr -d '"' | sed 's/postgresql:\/\//postgresql+psycopg:\/\//')" >> $GITHUB_OUTPUT
-          echo "anon_key=$(supabase status --output env | grep ANON_KEY | cut -d '=' -f2 | tr -d '"')" >> $GITHUB_OUTPUT
-          echo "service_key=$(supabase status --output env | grep SERVICE_ROLE_KEY | cut -d '=' -f2 | tr -d '"')" >> $GITHUB_OUTPUT
-          echo "inbucket_url=$(supabase status --output env | grep INBUCKET_URL | cut -d '=' -f2 | tr -d '"')" >> $GITHUB_OUTPUT
+      # Note: Supabase local uses static credentials (same for all local instances)
+      # These values are documented and safe to hardcode:
+      # https://github.com/orgs/supabase/discussions/13377
 
       - name: Set up Python
         uses: actions/setup-python@v6
@@ -142,10 +135,11 @@ jobs:
           uv run python app/initial_data.py
         working-directory: backend
         env:
-          DATABASE_URL: ${{ steps.supabase.outputs.db_url }}
-          SUPABASE_URL: ${{ steps.supabase.outputs.api_url }}
-          SUPABASE_ANON_KEY: ${{ steps.supabase.outputs.anon_key }}
-          SUPABASE_SERVICE_KEY: ${{ steps.supabase.outputs.service_key }}
+          # Supabase local static values (psycopg driver for SQLAlchemy)
+          DATABASE_URL: postgresql+psycopg://postgres:postgres@127.0.0.1:54322/postgres
+          SUPABASE_URL: http://127.0.0.1:54321
+          SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZS1kZW1vIiwicm9sZSI6ImFub24iLCJleHAiOjE5ODM4MTI5OTZ9.CRXP1A7WOeoJeXxjNni43kdQwgnWNReilDMblYTn_I0
+          SUPABASE_SERVICE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZS1kZW1vIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImV4cCI6MTk4MzgxMjk5Nn0.EGIM96RAZx35lJzdJsyH-qQwv8Hdp7fsn3W0YpN81IU
 
       - name: Start backend API
         run: |
@@ -153,10 +147,11 @@ jobs:
           echo $! > backend_server.pid
         working-directory: backend
         env:
-          DATABASE_URL: ${{ steps.supabase.outputs.db_url }}
-          SUPABASE_URL: ${{ steps.supabase.outputs.api_url }}
-          SUPABASE_ANON_KEY: ${{ steps.supabase.outputs.anon_key }}
-          SUPABASE_SERVICE_KEY: ${{ steps.supabase.outputs.service_key }}
+          # Supabase local static values
+          DATABASE_URL: postgresql+psycopg://postgres:postgres@127.0.0.1:54322/postgres
+          SUPABASE_URL: http://127.0.0.1:54321
+          SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZS1kZW1vIiwicm9sZSI6ImFub24iLCJleHAiOjE5ODM4MTI5OTZ9.CRXP1A7WOeoJeXxjNni43kdQwgnWNReilDMblYTn_I0
+          SUPABASE_SERVICE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZS1kZW1vIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImV4cCI6MTk4MzgxMjk5Nn0.EGIM96RAZx35lJzdJsyH-qQwv8Hdp7fsn3W0YpN81IU
           SMTP_HOST: localhost
           SMTP_PORT: "54325"
 
@@ -175,9 +170,11 @@ jobs:
         env:
           CI: true
           VITE_API_URL: http://localhost:8000
-          VITE_SUPABASE_URL: ${{ steps.supabase.outputs.api_url }}
-          VITE_SUPABASE_ANON_KEY: ${{ steps.supabase.outputs.anon_key }}
-          MAILCATCHER_HOST: ${{ steps.supabase.outputs.inbucket_url }}
+          # Supabase local static values
+          VITE_SUPABASE_URL: http://127.0.0.1:54321
+          VITE_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZS1kZW1vIiwicm9sZSI6ImFub24iLCJleHAiOjE5ODM4MTI5OTZ9.CRXP1A7WOeoJeXxjNni43kdQwgnWNReilDMblYTn_I0
+          # Inbucket for email testing (Supabase local SMTP server)
+          MAILCATCHER_HOST: http://127.0.0.1:54324
           FIRST_SUPERUSER: admin@example.com
           FIRST_SUPERUSER_PASSWORD: test-password-123
       
