ci: harden workflows (alembic check+upgrade in backend tests, docs safety in lint, compose validation, backend logs in E2E)

--- a/.github/workflows/test-docker-compose.yml
+++ b/.github/workflows/test-docker-compose.yml
@@ -47,9 +47,11 @@ jobs:
         uses: actions/checkout@v5
       - name: Create dummy .env file
         run: touch .env
+      - name: Validate docker compose config
+        run: docker compose config -q
       - name: Build all services
         run: docker compose build
       - name: Verify images were built
         run: |
-          docker images | grep curriculumextractor
+          docker images --format "{{.Repository}}:{{.Tag}}" | grep -E "(backend|frontend)"
           echo "✅ All Docker images built successfully"
