--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -41,8 +41,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-      - name: Create dummy .env file
-        run: touch .env
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
@@ -52,34 +50,8 @@ jobs:
         with:
           version: "0.9.5"
           enable-cache: true
-      - name: Clean up docker
-        run: docker compose down -v --remove-orphans
-        env:
-          REDIS_PASSWORD: test-redis-password
-          DOMAIN: test.example.com
-          FRONTEND_HOST: http://localhost:5173
-          STACK_NAME: curriculum-extractor-test
-          SECRET_KEY: test-secret-key
-          FIRST_SUPERUSER: admin@example.com
-          FIRST_SUPERUSER_PASSWORD: test-password
-          DATABASE_URL: postgresql+psycopg://postgres:password@localhost:5432/app
-          SUPABASE_URL: https://test.supabase.co
-          SUPABASE_SERVICE_KEY: test-service-key
-          REDIS_URL: redis://:test@redis:6379/0
-          CELERY_BROKER_URL: redis://:test@redis:6379/0
-          CELERY_RESULT_BACKEND: redis://:test@redis:6379/0
-          DOCKER_IMAGE_BACKEND: backend
-          DOCKER_IMAGE_FRONTEND: frontend
-          TAG: test
-          ENVIRONMENT: testing
-          BACKEND_CORS_ORIGINS: http://localhost:5173
-          SMTP_HOST: ""
-          SMTP_USER: ""
-          SMTP_PASSWORD: ""
-          EMAILS_FROM_EMAIL: noreply@test.example.com
-          SENTRY_DSN: ""
-      - name: Run tests
-        run: uv run bash scripts/test.sh "Coverage for ${{ github.sha }}"
+      - name: Install backend dependencies
+        run: uv sync --dev
         working-directory: backend
         env:
           # Required for Settings validation
@@ -98,32 +70,45 @@ jobs:
           FIRST_SUPERUSER: admin@example.com
           FIRST_SUPERUSER_PASSWORD: test-password
           EMAILS_FROM_EMAIL: noreply@test.example.com
-      - name: Cleanup
-        run: docker compose down -v --remove-orphans
+      - name: Alembic check and migrate
+        run: |
+          uv run alembic check
+          uv run alembic upgrade head
+        working-directory: backend
         env:
+          PROJECT_NAME: CurriculumExtractor
+          ENVIRONMENT: testing
+          DATABASE_URL: postgresql+psycopg://postgres:testpassword@localhost:5432/test
+          SUPABASE_URL: https://test.supabase.co
+          SUPABASE_ANON_KEY: test-anon-key
+          SUPABASE_SERVICE_KEY: test-service-key
+          REDIS_URL: redis://localhost:6379/0
           REDIS_PASSWORD: test-redis-password
-          DOMAIN: test.example.com
-          FRONTEND_HOST: http://localhost:5173
-          STACK_NAME: curriculum-extractor-test
-          SECRET_KEY: test-secret-key
+          CELERY_BROKER_URL: redis://localhost:6379/0
+          CELERY_RESULT_BACKEND: redis://localhost:6379/0
+          SECRET_KEY: test-secret-key-for-ci
           FIRST_SUPERUSER: admin@example.com
           FIRST_SUPERUSER_PASSWORD: test-password
-          DATABASE_URL: postgresql+psycopg://postgres:password@localhost:5432/app
-          SUPABASE_URL: https://test.supabase.co
-          SUPABASE_SERVICE_KEY: test-service-key
-          REDIS_URL: redis://:test@redis:6379/0
-          CELERY_BROKER_URL: redis://:test@redis:6379/0
-          CELERY_RESULT_BACKEND: redis://:test@redis:6379/0
-          DOCKER_IMAGE_BACKEND: backend
-          DOCKER_IMAGE_FRONTEND: frontend
-          TAG: test
-          ENVIRONMENT: testing
-          BACKEND_CORS_ORIGINS: http://localhost:5173
-          SMTP_HOST: ""
-          SMTP_USER: ""
-          SMTP_PASSWORD: ""
           EMAILS_FROM_EMAIL: noreply@test.example.com
-          SENTRY_DSN: ""
+
+      - name: Run tests (coverage)
+        run: uv run bash scripts/test.sh "Coverage for ${{ github.sha }}"
+        working-directory: backend
+        env:
+          PROJECT_NAME: CurriculumExtractor
+          ENVIRONMENT: testing
+          DATABASE_URL: postgresql+psycopg://postgres:testpassword@localhost:5432/test
+          SUPABASE_URL: https://test.supabase.co
+          SUPABASE_ANON_KEY: test-anon-key
+          SUPABASE_SERVICE_KEY: test-service-key
+          REDIS_URL: redis://localhost:6379/0
+          REDIS_PASSWORD: test-redis-password
+          CELERY_BROKER_URL: redis://localhost:6379/0
+          CELERY_RESULT_BACKEND: redis://localhost:6379/0
+          SECRET_KEY: test-secret-key-for-ci
+          FIRST_SUPERUSER: admin@example.com
+          FIRST_SUPERUSER_PASSWORD: test-password
+          EMAILS_FROM_EMAIL: noreply@test.example.com
       - name: Store coverage files
         uses: actions/upload-artifact@v4
         with:
