--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -41,6 +41,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+      - name: Create dummy .env file
+        run: touch .env
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
